# malloc-client-cpp

./: .gitignore  CMakeLists.txt  README.md  malloc-client.cpp  malloc-client.hpp  mdspan-demo.cpp
include/: malloc-client-mdspan.hpp  malloc-client.hpp
